--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   palette_generator: ^0.3.3+2
-
+  date_time_picker:  ^2.1.0
+  date_format: ^2.0.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
